[webfragment] Fix failing test.